--- a/views/doc/balju1.html
+++ b/views/doc/balju1.html
@@ -7,12 +7,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 <style>
-table { font-size: 14px; }
+table { font-size: 12px; }
 </style>
 
-<script src="/javascripts/textFit.js"></script>
-
-<body class="p-1">
+<body class="p-0">
 <%
     if (my.FILENAME1 != '') {
 %>
@@ -32,13 +30,14 @@ table { font-size: 14px; }
 <%
     }
 %>
+    <table cellspacing="0" cellpadding="0" class="w-100">
+        <tr><td class="text-center"><b style="font-size: 50px;">발&nbsp;&nbsp;&nbsp;주&nbsp;&nbsp;&nbsp;서</b></td></tr>
+        <tr><td style="border-bottom: 1px solid #000;">No. <%=my.docNum%></td></tr>
+    </table>
 
-    <table cellspacing="0" cellpadding="0" class="w-100" style="font-size: 14px;">
-        <tr><td colspan="2" class="text-center"><b style="font-size: 50px;">발&nbsp;&nbsp;&nbsp;주&nbsp;&nbsp;&nbsp;서</b></td></tr>
-        <tr><td colspan="2" style="border-bottom: 1px solid #000;">No. <%=my.docNum%></td></tr>
-
+    <table cellspacing="0" cellpadding="0" class="w-100">
         <tr>
-            <td style="min-width: 500px;" valign="top">
+            <td style="min-width: 550px;" valign="top">
                 <h4 class="mt-3"><%=your.COMPANY%> 귀중</h4>
                 <table>
                     <tr>
@@ -49,7 +48,7 @@ table { font-size: 14px; }
                             <div>자</div>
                         </th>
                         <td class="px-1"></td>
-                        <td><%=your.EDATE%></td>
+                        <td class="auto_text_size"><%=your.EDATE%></td>
                     </tr>
                     <tr>
                         <th class="d-flex justify-content-between">
@@ -59,7 +58,7 @@ table { font-size: 14px; }
                             <div>자</div>
                         </th>
                         <td></td>
-                        <td><%=your.DLV%></td>
+                        <td class="auto_text_size"><%=your.DLV%></td>
                     </tr>
                     <tr>
                         <th class="d-flex justify-content-between">
@@ -67,7 +66,7 @@ table { font-size: 14px; }
                             <div>고</div>
                         </th>
                         <td></td>
-                        <td><%=your.ETC%></td>
+                        <td class="auto_text_size"><%=your.ETC%></td>
                     </tr>
                     <tr>
                         <th class="d-flex justify-content-between">
@@ -77,7 +76,7 @@ table { font-size: 14px; }
                             <div>호</div>
                         </th>
                         <td></td>
-                        <td><%=your.TEL%></td>
+                        <td class="auto_text_size"><%=your.TEL%></td>
                     </tr>
                     <tr>
                         <th class="d-flex justify-content-between">
@@ -87,7 +86,7 @@ table { font-size: 14px; }
                             <div>호</div>
                         </th>
                         <td></td>
-                        <td><%=your.FAX%></td>
+                        <td class="auto_text_size"><%=your.FAX%></td>
                     </tr>
                     <tr>
                         <th class="d-flex justify-content-between">
@@ -96,11 +95,11 @@ table { font-size: 14px; }
                             <div>일</div>
                         </th>
                         <td></td>
-                        <td><%=your.EMAIL%></td>
+                        <td class="auto_text_size"><%=your.EMAIL%></td>
                     </tr>
                 </table>
             </td>
-            <td style="min-width: 500px;">
+            <td style="min-width: 450px;">
                 <h4 class="mt-3"><%=my.COMPANY%></h4>
                 <table>
                     <tr>
@@ -119,7 +118,7 @@ table { font-size: 14px; }
                             <div>표</div>
                         </th>
                         <td></td>
-                        <td><%=my.NAME1%></td>
+                        <td class="auto_text_size"><%=my.NAME1%></td>
                     </tr>
                     <tr>
                         <th class="d-flex justify-content-between">
@@ -144,7 +143,7 @@ table { font-size: 14px; }
                             <div>처</div>
                         </th>
                         <td></td>
-                        <td>
+                        <td class="auto_text_size">
                             <%=my.HP==''?'':'M: '+my.HP%>
                             <%=my.TEL==''?'':'T: '+my.TEL%>
                             <%=my.FAX==''?'':'F: '+my.FAX%>
@@ -157,13 +156,12 @@ table { font-size: 14px; }
                             <div>소</div>
                         </th>
                         <td></td>
-                        <td><%=my.ADDR1%> <%=my.ADDR2%></td>
+                        <td class="auto_text_size"><%=my.ADDR1%> <%=my.ADDR2%></td>
                     </tr>
                 </table>
             </td>
         </tr>
-
-        <tr><td colspan="2" style="border-bottom: 1px solid #000; height: 30px;"></td></tr>
+        <tr><td colspan="2" style="border-bottom: 1px solid #000; height: 10px;"></td></tr>
         <tr style="height: 60px; ">
             <td>
                 <h5>
@@ -205,20 +203,20 @@ table { font-size: 14px; }
 <%
         if (obj.FILENAME0 != '') {
 %>
-                        <td class="p-0"><img src="<%=obj.FILENAME0%>" height="50"/> <%=obj.NAME1%></td>
+                        <td class="p-0 auto_text_size"><img src="<%=obj.FILENAME0%>" height="50"/> <%=obj.NAME1%></td>
 <%
         } else {
 %>
-                        <td><%=obj.NAME1%></td>
+                        <td class="auto_text_size"><%=obj.NAME1%></td>
 <%
         }
 %>
-                        <td align="center" valign="middle"><%=obj.GUKUK%></td>
-                        <td align="center" valign="middle"><%=obj.UNIT%></td>
-                        <td class="text-center" valign="middle"><%=obj.QTY.toLocaleString()%></td>
-                        <td class="text-end" valign="middle"><%=obj.DANGA.toLocaleString()%></td>
-                        <td class="text-end" valign="middle"><%=obj.PRICE.toLocaleString()%></td>
-                        <td class="text-end" valign="middle"><%=obj.TAX.toLocaleString()%></td>
+                        <td class="auto_text_size" align="center" valign="middle"><%=obj.GUKUK%></td>
+                        <td class="auto_text_size" align="center" valign="middle"><%=obj.UNIT%></td>
+                        <td class="text-center auto_text_size" valign="middle"><%=obj.QTY.toLocaleString()%></td>
+                        <td class="text-end auto_text_size" valign="middle"><%=obj.DANGA.toLocaleString()%></td>
+                        <td class="text-end auto_text_size" valign="middle"><%=obj.PRICE.toLocaleString()%></td>
+                        <td class="text-end auto_text_size" valign="middle"><%=obj.TAX.toLocaleString()%></td>
                     </tr>
 <%
         priceSum = priceSum + obj.PRICE;
@@ -226,9 +224,9 @@ table { font-size: 14px; }
     }
 %>
                     <tr>
-                        <td align="center" colspan="6"><b>합계</b></td>
-                        <td class="text-end"><b><%=priceSum.toLocaleString()%></b></td>
-                        <td class="text-end"><b><%=taxSum.toLocaleString()%></b></td>
+                        <td class="auto_text_size" align="center" colspan="6"><b>합계</b></td>
+                        <td class="text-end auto_text_size"><b><%=priceSum.toLocaleString()%></b></td>
+                        <td class="text-end auto_text_size"><b><%=taxSum.toLocaleString()%></b></td>
                     </tr>
 
 
@@ -240,10 +238,7 @@ table { font-size: 14px; }
     </table>
 </body>
 </html>
-
+<script src="/javascripts/textFit.js"></script>
 <script>
-setTimeout(function() {
-    textFit(document.getElementsByClassName('box'), {minFontSize:10, maxFontSize: 50});
-}, 100);
-
+    textFit(document.getElementsByClassName('auto_text_size'));
 </script>
