--- a/views/doc/youngsu1.html
+++ b/views/doc/youngsu1.html
@@ -7,7 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <link href="/stylesheets/doc.css" rel="stylesheet">
 
-<body class="p-1">
+<body class="p-0">
 <%
     if (my.FILENAME0 != '') {
 %>
@@ -42,24 +42,24 @@
                 <table>
                     <tr>
                         <th rowspan="4" class="LineRight" width=30>공<br>급<br>자</th>
-                        <th class="LineRight" style="line-height: 12px;">등록<br>번호</th>
-                        <td colspan="4" class="text-center"><b style="font-size: 17px;"><%=my.CNUM%></b></td>
+                        <th class="LineRight auto_text_size" style="line-height: 12px;">등록<br>번호</th>
+                        <td colspan="4" class="text-center auto_text_size"><b><%=my.CNUM%></b></td>
                     </tr>
                     <tr class="LineTop">
                         <th width=40 class="LineRight">상호</th>
-                        <td class="LineRight ps-1"><%=my.COMPANY%></td>
+                        <td class="LineRight ps-1 auto_text_size"><%=my.COMPANY%></td>
                         <th width=40 class="LineRight">성명</td>
-                        <td class="ps-1"><%=my.NAME1%></td>
+                        <td class="ps-1 auto_text_size"><%=my.NAME1%></td>
                     </tr>
                     <tr class="LineTop">
                         <th width=40 class="LineRight">주소</th>
-                        <td colspan="3" class="ps-1"><%=my.ADDR1%> <%=my.ADDR2%></td>
+                        <td colspan="3" class="ps-1 auto_text_size"><%=my.ADDR1%> <%=my.ADDR2%></td>
                     </tr>
                     <tr class="LineTop">
                         <th width=40 class="LineRight">TEL</th>
-                        <td class="LineRight ps-1"><%=my.TEL%></td>
+                        <td class="LineRight ps-1 auto_text_size"><%=my.TEL%></td>
                         <th width=40 class="LineRight">FAX</th>
-                        <td class="ps-1"><%=my.FAX%></td>
+                        <td class="ps-1 auto_text_size"><%=my.FAX%></td>
                     </tr>
                 </table>
             </td>
@@ -74,14 +74,14 @@
                         <th>비고</th>
                     </tr>
                     <tr class="LineTop">
-                        <td class="LineRight2 text-center"><%=your.EDATE%></th>
-                        <td class="LineRight2 LineBottom text-end pe-1"><%=my.TTL_PRICE.toLocaleString()%></td>
-                        <td><%=your.ETC%></th>
+                        <td class="LineRight2 text-center auto_text_size"><%=your.EDATE%></th>
+                        <td class="LineRight2 LineBottom text-end pe-1 auto_text_size"><%=my.TTL_PRICE.toLocaleString()%></td>
+                        <td class="auto_text_size text-center"><%=your.ETC%></th>
                     </tr>
                 </table>
             </td>
         </tr>
-        <tr class="LineTop">
+        <tr class="LineTop" height=30>
             <th>위 금액을 영수(청구) 함</th>
         </tr>
 
@@ -108,10 +108,10 @@
         }
 %>
                     <tr class="LineTop" style="background: <%=bg%>;">
-                        <td class="LineRight ps-1"><%=obj.NAME1%></td>
-                        <td class="LineRight text-center"><%=obj.QTY%></td>
-                        <td class="LineRight text-end pe-1"><%=obj.DANGA.toLocaleString()%></td>
-                        <td class=" text-end pe-1"><%=(obj.PRICE + obj.TAX).toLocaleString()%></td>
+                        <td class="LineRight ps-1 auto_text_size"><%=obj.NAME1%></td>
+                        <td class="LineRight text-center auto_text_size"><%=obj.QTY%></td>
+                        <td class="LineRight text-end pe-1 auto_text_size"><%=obj.DANGA.toLocaleString()%></td>
+                        <td class=" text-end pe-1 auto_text_size"><%=(obj.PRICE + obj.TAX).toLocaleString()%></td>
                     </tr>
 <%
         priceSum = priceSum + (obj.PRICE + obj.TAX);
@@ -119,7 +119,7 @@
 %>
                     <tr class="LineTop">
                         <th class="LineRight ps-1" colspan="2">합계</th>
-                        <td class="LineRight text-end pe-1" colspan="2"><%=priceSum.toLocaleString()%></td>
+                        <td class="LineRight text-end pe-1 auto_text_size" colspan="2"><%=priceSum.toLocaleString()%></td>
                     </tr>
                 </table>
             </td>
@@ -128,5 +128,10 @@
     </table>
 
     <%=your.ETC%>
+
+    <script src="/javascripts/textFit.js"></script>
+    <script>
+        textFit(document.getElementsByClassName('auto_text_size'));
+    </script>
 </body>
 </html>
