--- a/views/doc/mungse1.html
+++ b/views/doc/mungse1.html
@@ -44,7 +44,7 @@
                         <td width="50%">
                             <table>
                                 <tr>
-                                    <th rowspan="4" class="LineRight" width=30>공<br>급<br>받<br>는<br>자</th>
+                                    <th rowspan="4" class="LineRight">공<br>급<br>받<br>는<br>자</th>
                                     <th class="LineRight auto_text_size" style="line-height: 12px;">등록<br>번호</th>
                                     <td colspan="4" class="LineRight text-center auto_text_size"><%=your.CNUM%></td>
                                 </tr>
@@ -73,7 +73,7 @@
                         <td valign="top">
                             <table>
                                 <tr>
-                                    <th rowspan="4" class="LineRight auto_text_size" width=30>공<br>급<br>자</th>
+                                    <th rowspan="4" class="LineRight" width=30>공<br>급<br>자</th>
                                     <th class="LineRight auto_text_size" style="line-height: 12px;">등록<br>번호</th>
                                     <td colspan="4" class="text-center auto_text_size"><%=my.CNUM%></td>
                                 </tr>
@@ -85,7 +85,7 @@
                                 </tr>
                                 <tr class="LineTop" height=26>
                                     <th width=30 class="LineRight">주소</th>
-                                    <td colspan="3" class="ps-1 auto_text_size"><%=my.ADDR1%> <%=my.ADDR2%></td>
+                                    <td colspan="3" class="ps-1  auto_text_size"><%=my.ADDR1%> <%=my.ADDR2%></td>
                                 </tr>
                                 <tr class="LineTop" height=26>
                                     <th width=30 class="LineRight">TEL</th>
