--- a/views/doc/estimate2.html
+++ b/views/doc/estimate2.html
@@ -124,7 +124,16 @@
     </div>
 
     <div class="d-flex flex-row justify-content-between mt-5 mb-1">
-        <div style="font-size: 20px;">견적금액<%=your.IS_VAT==0?'(VAT포함)':'(VAT별도)'%></div>
+        <div style="font-size: 20px;">
+            견적금액
+            <% if (your.IS_VAT == 0) { %>
+                (VAT 없음)
+            <% } else if (your.IS_VAT == 1) { %>
+                (VAT 포함)
+            <% } else { %>
+                (VAT 별도)
+            <% } %>
+        </div>
         <div style="font-size: 20px;"><b>일금 <%=my.HAN_PRICE%> 원정 (￦<%=my.TTL_PRICE.toLocaleString()%>)</b></div>
     </div>
 
