--- a/views/doc/mungse1.html
+++ b/views/doc/mungse1.html
@@ -11,8 +11,8 @@
 <%
     if (my.FILENAME0 != '') {
 %>
-    <div style="position: absolute; top: 60px; right: 10px;">
-        <img src="<%=my.FILENAME0%>" height="40"/>
+    <div style="position: absolute; top: 59px; right: 3px;">
+        <img src="<%=my.FILENAME0%>" height="26"/>
     </div>
 <%
     }
@@ -44,7 +44,7 @@
                         <td width="50%">
                             <table>
                                 <tr>
-                                    <th rowspan="4" class="LineRight">공<br>급<br>받<br>는<br>자</th>
+                                    <th rowspan="4" class="LineRight" style="width: 25px;">공<br>급<br>받<br>는<br>자</th>
                                     <th class="LineRight auto_text_size" style="line-height: 12px;">등록<br>번호</th>
                                     <td colspan="4" class="LineRight text-center auto_text_size"><%=your.CNUM%></td>
                                 </tr>
@@ -73,7 +73,7 @@
                         <td valign="top">
                             <table>
                                 <tr>
-                                    <th rowspan="4" class="LineRight" width=30>공<br>급<br>자</th>
+                                    <th rowspan="4" class="LineRight" style="width: 25px;">공<br>급<br>자</th>
                                     <th class="LineRight auto_text_size" style="line-height: 12px;">등록<br>번호</th>
                                     <td colspan="4" class="text-center auto_text_size"><%=my.CNUM%></td>
                                 </tr>
