--- a/views/doc/estimate1.html
+++ b/views/doc/estimate1.html
@@ -227,7 +227,7 @@ table { font-size: 12px; }
                     <% } else if (your.IS_VAT == 1) { %>
                         (VAT 포함)
                     <% } else { %>
-                        (VAT 별도)
+                        (VAT 포함)
                     <% } %>
                 </h5>
             </td>
