--- a/views/doc/estimate2.html
+++ b/views/doc/estimate2.html
@@ -131,7 +131,7 @@
             <% } else if (your.IS_VAT == 1) { %>
                 (VAT 포함)
             <% } else { %>
-                (VAT 별도)
+                (VAT 포함)
             <% } %>
         </div>
         <div style="font-size: 20px;"><b>일금 <%=my.HAN_PRICE%> 원정 (￦<%=my.TTL_PRICE.toLocaleString()%>)</b></div>
