--- a/views/doc/balju1.html
+++ b/views/doc/balju1.html
@@ -7,7 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 <style>
-table { font-size: 12px; }
+table { font-size: 14px; }
 </style>
 
 <body class="p-0">
@@ -24,7 +24,7 @@ table { font-size: 12px; }
 <%
     if (my.FILENAME0 != '') {
 %>
-    <div style="position: absolute; top: 145px; left: 700px;">
+    <div style="position: absolute; top: 145px; left: 800px;">
         <img src="<%=my.FILENAME0%>" height="40"/>
     </div>
 <%
@@ -38,7 +38,7 @@ table { font-size: 12px; }
     <table cellspacing="0" cellpadding="0" class="w-100">
         <tr>
             <td style="min-width: 550px;" valign="top">
-                <h4 class="mt-3"><%=your.COMPANY%> 귀중</h4>
+                <h3 class="mt-3"><%=your.COMPANY%> 귀중</h3>
                 <table>
                     <tr>
                         <th width="60" class="d-flex justify-content-between">
@@ -100,7 +100,7 @@ table { font-size: 12px; }
                 </table>
             </td>
             <td style="min-width: 450px;">
-                <h4 class="mt-3"><%=my.COMPANY%></h4>
+                <h3 class="mt-3"><%=my.COMPANY%></h3>
                 <table>
                     <tr>
                         <th width="60" class="d-flex justify-content-between">
@@ -161,8 +161,14 @@ table { font-size: 12px; }
                 </table>
             </td>
         </tr>
-        <tr><td colspan="2" style="border-bottom: 1px solid #000; height: 10px;"></td></tr>
-        <tr style="height: 60px; ">
+
+        <tr>
+            <td colspan="2">
+                <div style="font-size: 16px;" class="my-1">아래와 같이 발주합니다.</div>
+            </td>
+        </tr>
+
+        <tr>
             <td>
                 <h5>
                     발주금액
@@ -180,17 +186,19 @@ table { font-size: 12px; }
 
         <tr>
             <td colspan="2">
-                <table class="table table-striped">
-                    <tr class="text-center">
-                        <th width="50">No.</th>
-                        <th>품명</th>
-                        <th>규격</th>
-                        <th width="5%">단위</th>
-                        <th width="5%">수량</th>
-                        <th width="10%">단가</th>
-                        <th width="12%">공급가액</th>
-                        <th width="10%">세액</th>
-                    </tr>
+                <table class="table table-striped" style="border-top: 1px solid #000;">
+                    <thead>
+                        <tr class="text-center">
+                            <th width="50">No.</th>
+                            <th>품명</th>
+                            <th>규격</th>
+                            <th width="5%">단위</th>
+                            <th width="5%">수량</th>
+                            <th width="10%">단가</th>
+                            <th width="12%">공급가액</th>
+                            <th width="10%">세액</th>
+                        </tr>
+                    </thead>
 <%
     var priceSum = 0;
     var taxSum = 0;
@@ -200,7 +208,8 @@ table { font-size: 12px; }
 %>
                     <tr>
                         <td align="center" valign="middle"><%=i%></td>
-<%
+                        <td class="auto_text_size"><%=obj.NAME1%></td>
+<!-- <%
         if (obj.FILENAME0 != '') {
 %>
                         <td class="p-0 auto_text_size"><img src="<%=obj.FILENAME0%>" height="50"/> <%=obj.NAME1%></td>
@@ -210,7 +219,7 @@ table { font-size: 12px; }
                         <td class="auto_text_size"><%=obj.NAME1%></td>
 <%
         }
-%>
+%> -->
                         <td class="auto_text_size" align="center" valign="middle"><%=obj.GUKUK%></td>
                         <td class="auto_text_size" align="center" valign="middle"><%=obj.UNIT%></td>
                         <td class="text-center auto_text_size" valign="middle"><%=obj.QTY.toLocaleString()%></td>
