--- a/views/doc/estimate1.html
+++ b/views/doc/estimate1.html
@@ -7,7 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 <style>
-table { font-size: 12px; }
+table { font-size: 14px; }
 </style>
 
 <body class="p-0">
@@ -129,8 +129,6 @@ table { font-size: 12px; }
                         <td class="auto_text_size"><%=your.EMAIL%></td>
                     </tr>
                 </table>
-                <br>
-                <div style="font-size: 18px;">아래와 같이 견적합니다.</div>
             </td>
             <td style="min-width: 450px;" valign="top">
                 <h3 class="mt-3"><%=my.COMPANY%></h3>
@@ -209,16 +207,21 @@ table { font-size: 12px; }
                         </th>
                         <td></td>
                         <td class="auto_text_size">
-                            <%=my.HP==''?'':'M: '+my.HP%>
-                            <%=my.EMAIL==''?'':'E: '+my.EMAIL%>
+                            <%=my.HP==''?'':'M:'+my.HP%>
+                            <%=my.EMAIL==''?'':'E:'+my.EMAIL%>
                         </td>
                     </tr>
                 </table>
             </td>
         </tr>
 
-        <tr><td colspan="2" style="border-bottom: 1px solid #000; height: 10px;"></td></tr>
-        <tr style="height: 50px; ">
+        <tr>
+            <td colspan="2">
+                <div style="font-size: 16px;" class="my-1">아래와 같이 견적합니다.</div>
+            </td>
+        </tr>
+
+        <tr>
             <td>
                 <h5>
                     견적금액
@@ -236,18 +239,21 @@ table { font-size: 12px; }
 
         <tr>
             <td colspan="2">
-                <table class="table table-striped">
-                    <tr class="text-center">
-                        <th width="50">No.</th>
-                        <th>품명</th>
-                        <th>규격</th>
-                        <th width="5%">단위</th>
-                        <th width="5%">수량</th>
-                        <th width="10%">단가</th>
-                        <th width="12%">공급가액</th>
-                        <th width="10%">세액</th>
-                        <th width="15%">합계</th>
-                    </tr>
+                <table class="table table-striped" style="border-top: 1px solid #000;">
+                    <thead>
+                        <tr class="text-center">
+                            <th width="50">No.</th>
+                            <th>품명</th>
+                            <th>규격</th>
+                            <th width="5%">단위</th>
+                            <th width="5%">수량</th>
+                            <th width="10%">단가</th>
+                            <th width="12%">공급가액</th>
+                            <th width="10%">세액</th>
+                            <th width="15%">합계</th>
+                        </tr>
+                    </thead>
+
 <%
     var priceSum = 0;
     var taxSum = 0;
@@ -255,20 +261,21 @@ table { font-size: 12px; }
     for (obj of list) {
         i++;
 %>
+
                     <tr>
                         <td align="center" valign="middle"><%=i%></td>
-
-<%
+                        <td class="auto_text_size"><%=obj.NAME1%></td>
+<!-- <%
     if (obj.FILENAME0 != '') {
 %>
-                        <td class="p-0 auto_text_size"><img src="<%=obj.FILENAME0%>" height="50"/> <%=obj.NAME1%></td>
+                        <td class="px-0 py-1 auto_text_size"><img src="<%=obj.FILENAME0%>" height="45" class="me-1"/> <%=obj.NAME1%></td>
 <%
     } else {
 %>
                         <td class="auto_text_size"><%=obj.NAME1%></td>
 <%
     }
-%>
+%> -->
                         <td class="auto_text_size" align="center" valign="middle"><%=obj.GUKUK%></td>
                         <td class="auto_text_size" align="center" valign="middle"><%=obj.UNIT%></td>
                         <td class="text-center" valign="middle"><%=obj.QTY.toLocaleString()%></td>
@@ -299,7 +306,7 @@ table { font-size: 12px; }
 
     <!-- <%=your.MEMO%> -->
 
-    <script src="/javascripts/textFit.js"></script>
+    <script src="/javascripts/textFit.js?v=<%=new Date().getTime()%>"></script>
     <script>
         textFit(document.getElementsByClassName('auto_text_size'));
     </script>
